# RADAR

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  streamlit_app.py
RESEARCH/: ACR_Assistant_Deck.pptx  ACR_RAG_IEEE_G_Systems.docx  ACR_RAG_IEEE_H_Abstention.docx  ACR_RAG_IEEE_I_Empirical.docx  ACR_RAG_IEEE_P10_Lessons.docx  ACR_RAG_IEEE_P1_HCI.docx  ACR_RAG_IEEE_P2_Safety.docx  ACR_RAG_IEEE_P3_Tutorial.docx  ACR_RAG_IEEE_P4_IRPosition.docx  ACR_RAG_IEEE_P5_HealthEcon.docx  ACR_RAG_IEEE_P6_CrossDomain.docx  ACR_RAG_IEEE_P7_RedTeam.docx  ACR_RAG_IEEE_P8_Demo.docx  ACR_RAG_IEEE_P9_Comparative.docx  ACR_RAG_Variant_A_Conference.docx  ACR_RAG_Variant_B_Journal.docx  ACR_RAG_Variant_C_Workshop.docx  ACR_RAG_Variant_D_Engineering.docx  ACR_RAG_Variant_E_Survey.docx  ACR_RAG_Variant_F_Artifact.docx  gpt acr guidelines assistant.docx
RESEARCH/_paper_sources/: build_10_papers.js  common.js  ieee_common.js  refs.js  variant_a_conference.js  variant_b_journal.js  variant_c_workshop.js  variant_d_engineering.js  variant_e_survey.js  variant_f_artifact.js  variant_g_ieee_systems.js  variant_h_ieee_abstention.js  variant_i_ieee_empirical.js
data/raw/: sample_acr_kb.json
eval/: metrics.py  run_eval.py  scenarios.json
scripts/: build_index.py  make_cheatsheet.py  make_deck.py
src/acr_assistant/: __init__.py  config.py  pipeline.py
src/acr_assistant/api/: main.py  schemas.py
src/acr_assistant/generation/: __init__.py  llm.py  prompts.py
src/acr_assistant/ingestion/: __init__.py  parser.py  schema.py
src/acr_assistant/retrieval/: __init__.py  retriever.py
tests/: test_pipeline.py
web/: index.html
