[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acr-assistant"
version = "0.2.0"
description = "LLM + RAG consult-support tool for radiology, grounded in the ACR Appropriateness Criteria"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Avakian, A.", email = "" },
    { name = "Chakravarty, J.", email = "" },
]
keywords = ["radiology", "rag", "llm", "clinical-decision-support", "acr"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "anthropic>=0.40.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26",
    "structlog>=24.0",
    "typer>=0.12.0",
    "jinja2>=3.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
ui = [
    "streamlit>=1.39.0",
]
docs = [
    "python-pptx>=1.0",
    "reportlab>=4.0",
]

[project.scripts]
acr-assistant = "acr_assistant.cli:app"

[project.urls]
Documentation = "file:./docs/ARCHITECTURE.md"
Source = "file:./"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
acr_assistant = ["py.typed"]

# ─── ruff ─────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "RUF", # ruff-specific
    "S",   # bandit
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S101",   # use of assert (fine in tests)
    "S301",   # pickle (we control the pickle file)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]
"scripts/*" = ["S"]
"eval/*" = ["S"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ─── mypy ─────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rank_bm25.*"
ignore_missing_imports = true

# ─── pytest ───────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: integration tests requiring the API server",
    "slow: tests that take >1 second",
    "claude: tests that require ANTHROPIC_API_KEY",
]

[tool.coverage.run]
source = ["src/acr_assistant"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]